Closed
Bug 1625832
Opened 6 years ago
Closed 6 years ago
VoiceOver "Show context menu" clicks in the wrong place
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla76
Tracking | Status | |
---|---|---|
firefox76 | --- | verified |
People
(Reporter: MarcoZ, Assigned: morgan)
References
()
Details
(Whiteboard: [Mac2020_1])
Attachments
(1 file)
After bug 1623402 has landed, the VoiceOver context menu action is supported, but it often clicks in the wrong place. STR:
- With VoiceOver on, open a current Nightly, and navigate to https://www.mozilla.org
- Press CTRL+Option+Shift+Down to interact with web content, then Ctrl+Option+RightArrow to traverse through it.
- Expand any of the link groups, for example the Features, and to a link, for example Add-Ons.
- Press Ctrl+Option+Shift+M to bring up the context menu.
- Expected: The context menu for a link should open. The first menu item should be "Open in a new tab".
- Actual: The context menu for the page opens, showing "Back" as the first item.
- Press Escape to close the menu.
- Navigate to the Heading 1 after the navigation links.
- Press Ctrl+Option+Shift+M again.
- Expected: The context menu for the page should open, with "Back" as the first menu item, where I could, for example, choose to inspect current element at the bottom.
- Actual: In my case, nothing happens.
I've also observed this on other pages, for example Github commit listings if I wanted to open a pull request or issue reference in another tab.
Reporter | ||
Comment 1•6 years ago
|
||
Additional info: No settings deviate from defaults, so no Fission enabled, but E10S as per default.
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → mreschenberg
Assignee | ||
Comment 2•6 years ago
|
||
Oh no I thought I got this to work on links... I'll check this today :) thanks Marco!
Assignee | ||
Comment 3•6 years ago
|
||
Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6975ab9842db
Feed mouse synthesizer gecko coordinates instead of Mac coordinates. r=eeejay
![]() |
||
Comment 5•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Updated•6 years ago
|
Flags: qe-verify+
Comment 6•6 years ago
|
||
I have managed to reproduce this issue using Firefox 76.0a1 (BuildId:20200329095417) on macOS 10.14
This issue is verified fixed using Firefox 76.0b4 (BuildId:20200412214314) on macOS 10.14
You need to log in
before you can comment on or make changes to this bug.
Description
•