Bug 1625832: Feed mouse synthesizer gecko coordinates instead of Mac coordinates. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D69035

--HG--
extra : moz-landing-system : lando